--- a/scss/devices/_mobile.scss
+++ b/scss/devices/_mobile.scss
@@ -5,7 +5,7 @@
       height: 20vh;
     }
     nav {
-      padding: 5%;
+      padding: 3%;
       display: flex;
       position: fixed;
       z-index: 1;
@@ -64,7 +64,7 @@
       }
 
       .open .nav--list__wrapper{
-        left: 0;
+        left: -300px;
       }
 
       .nav--hamburger {
